Include SDL2 CFlags in with the general CFlags: this fixes SDL2 build failures on macOS. Regenerate auto-conf/etc. Fix the SDL2 includes.

--- a/configure.ac
+++ b/configure.ac
@@ -183,6 +183,7 @@ case "$host" in
        ;;
 esac
 
+CFLAGS="$CFLAGS $SDL_CFLAGS"
 LIBS="$LIBS $WX_LIBS $SDL_LIBS"
 
 AM_CONDITIONAL(OS_LINUX, [test "$build_linux" = "yes"])
