--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -14,7 +14,7 @@ jobs:
         include:
         - name: Ubuntu 64bit (gcc)
           os: ubuntu-latest
-          args: --enable-networking --enable-release-build CFLAGS="-DPCEM_BUILD_VERSION=${GITHUB_SHA::8}"
+          args: -DUSE_NETWORKING=ON -DCMAKE_BUILD_TYPE=Release -DPCEM_VERSION_STRING="build ${GITHUB_SHA::8}"
           artifacts_name: PCem-Ubuntu-${{ github.head_ref }}-${{ github.run_number }}
           artifacts_path: PCem-${{ github.sha }}.tar.bz2
           installdeps: >-
@@ -22,10 +22,11 @@ jobs:
             libopenal-dev
             libwxgtk3.0-gtk3-dev
             libncap-dev
+            cmake
         - name: Windows 32bits (MSYS2)
           os: windows-latest
           compiler: MINGW32
-          args: --enable-networking --enable-release-build CFLAGS="-DPCEM_BUILD_VERSION=${GITHUB_SHA::8}"
+          args: -DUSE_NETWORKING=ON -DCMAKE_BUILD_TYPE=Release -DPCEM_VERSION_STRING="build ${GITHUB_SHA::8}"
           artifacts_name: PCem-Windows-MINGW32-${{ github.head_ref }}-${{ github.run_number }}
           artifacts_path: PCem-${{ github.sha }}.zip
           installdeps: >-
@@ -37,10 +38,11 @@ jobs:
             mingw-w64-i686-SDL2 
             mingw-w64-i686-openal 
             mingw-w64-i686-wxWidgets
+            mingw-w64-i686-cmake
         - name: Windows 64bits (MSYS2)
           os: windows-latest
           compiler: MINGW64
-          args: --enable-networking --enable-release-build CFLAGS="-DPCEM_BUILD_VERSION=${GITHUB_SHA::8}"
+          args: -DUSE_NETWORKING=ON -DCMAKE_BUILD_TYPE=Release -DPCEM_VERSION_STRING="build ${GITHUB_SHA::8}"
           artifacts_name: PCem-Windows-MINGW64-${{ github.head_ref }}-${{ github.run_number }}
           artifacts_path: PCem-${{ github.sha }}.zip
           installdeps: >-
@@ -52,7 +54,7 @@ jobs:
             mingw-w64-x86_64-SDL2
             mingw-w64-x86_64-openal
             mingw-w64-x86_64-wxWidgets
-
+            mingw-w64-x86_64-cmake
     runs-on: ${{ matrix.os }}
     name: ${{ matrix.name }}
     
@@ -153,8 +155,7 @@ jobs:
       shell: msys2 {0}
       run: |
         cd temp
-        autoreconf -i
-        ./configure ${{ matrix.args }}
+        cmake ${{ matrix.args }} .
     - name: make (Windows)
       if: runner.os == 'Windows'
       shell: msys2 {0}
@@ -180,7 +181,7 @@ jobs:
       run: |
         cd temp
         autoreconf -i
-        ./configure ${{ matrix.args }}
+        cmake ${{ matrix.args }} .
     - name: make (Linux)
       if: runner.os == 'Linux'
       run: |
