I had a moment, really should have made it in this file.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,11 @@ if(WIN32)
     endif()
 endif()
 
+if(${CMAKE_SYSTEM_PROCESSOR} STREQUAL "i386")
+	set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -msse2")
+	set(CMAKE_CXX_FLAGS "${CMAKE_C_FLAGS} -msse2")
+endif()
+
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 set(PCEM_VERSION_STRING "vNext" CACHE STRING "PCem Version String")
 set(PCEM_DEFINES PCEM_VERSION_STRING="${PCEM_VERSION_STRING}")
