--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -15,7 +15,7 @@ jobs:
         - name: Ubuntu 64bit (gcc)
           os: ubuntu-latest
           args: -DUSE_NETWORKING=ON -DCMAKE_BUILD_TYPE=Release -DPCEM_VERSION_STRING="build ${GITHUB_SHA::8}"
-          artifacts_name: PCem-Ubuntu-${GITHUB_SHA::8}-${{ github.run_number }}
+          artifacts_name: PCem-Ubuntu-${{ github.ref_name }}-${{ github.run_number }}
           artifacts_path: PCem-${{ github.sha }}.tar.bz2
           installdeps: >-
             libsdl2-dev
@@ -27,7 +27,7 @@ jobs:
           os: windows-latest
           compiler: MINGW32
           args: -DUSE_NETWORKING=ON -DCMAKE_BUILD_TYPE=Release -DPCEM_VERSION_STRING="build ${GITHUB_SHA::8}"
-          artifacts_name: PCem-Windows-MINGW32-${GITHUB_SHA::8}-${{ github.run_number }}
+          artifacts_name: PCem-Windows-MINGW32-${{ github.ref_name }}-${{ github.run_number }}
           artifacts_path: PCem-${{ github.sha }}.zip
           installdeps: >-
             base-devel
@@ -43,7 +43,7 @@ jobs:
           os: windows-latest
           compiler: MINGW64
           args: -DUSE_NETWORKING=ON -DCMAKE_BUILD_TYPE=Release -DPCEM_VERSION_STRING="build ${GITHUB_SHA::8}"
-          artifacts_name: PCem-Windows-MINGW64-${GITHUB_SHA::8}-${{ github.run_number }}
+          artifacts_name: PCem-Windows-MINGW64-${{ github.ref_name }}-${{ github.run_number }}
           artifacts_path: PCem-${{ github.sha }}.zip
           installdeps: >-
             base-devel
@@ -107,7 +107,7 @@ jobs:
         rm -Rf ./dist/src/.git
         cp /mingw32/bin/libdeflate.dll dist/bin
         cp /mingw32/bin/libexpat-1.dll dist/bin
-        cp /mingw32/bin/libgcc_s_seh-1.dll dist/bin
+        cp /mingw32/bin/libgcc_s_dw2-1.dll dist/bin
         cp /mingw32/bin/libjpeg-8.dll dist/bin
         cp /mingw32/bin/liblzma-5.dll dist/bin
         cp /mingw32/bin/libopenal-1.dll dist/bin
