--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -431,4 +431,5 @@ endif()
 
 add_executable(pcem ${PCEM_SRC})
 target_compile_definitions(pcem PUBLIC ${PCEM_DEFINES})
+target_compile_options(pcem PUBLIC $<$<COMPILE_LANGUAGE:CXX>:-fcommon> $<$<COMPILE_LANGUAGE:C>:-fcommon>)
 target_link_libraries(pcem ${wxWidgets_LIBRARIES} ${SDL2_LIBRARIES} ${OPENAL_LIBRARY} ${OPENGL_LIBRARIES} ${ALSA_LIBRARIES} ${NETWORKING_LIBRARIES})
