--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -429,7 +429,11 @@ if(USE_NETWORKING)
 	endif()
 endif()
 
-add_executable(pcem ${PCEM_SRC})
+add_library(pcem SHARED ${PCEM_SRC})
 target_compile_definitions(pcem PUBLIC ${PCEM_DEFINES})
 target_compile_options(pcem PUBLIC $<$<COMPILE_LANGUAGE:CXX>:-fcommon> $<$<COMPILE_LANGUAGE:C>:-fcommon>)
 target_link_libraries(pcem ${wxWidgets_LIBRARIES} ${SDL2_LIBRARIES} ${OPENAL_LIBRARY} ${OPENGL_LIBRARIES} ${ALSA_LIBRARIES} ${NETWORKING_LIBRARIES})
+
+add_executable(pcem-bin main.c)
+target_link_libraries(pcem-bin pcem)
+set_target_properties(pcem-bin PROPERTIES OUTPUT_NAME "pcem")
